sf-hrms/force-app/main/default/objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <label>Department</label>
    <pluralLabel>Departments</pluralLabel>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Organizational departments for employee grouping and reporting hierarchy</description>
</CustomObject>