sf-hrms/force-app/main/default/objects/Department__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Department Code</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique short code for the department (e.g. TECH, HR, OPS)</description>
    <inlineHelpText>Short code used for reporting and integrations</inlineHelpText>
</CustomField>