sf-hrms/force-app/main/default/objects/Department__c/fields/Head__c.field-meta.xml
<CustomField>
    <fullName>Head__c</fullName>
    <label>Department Head</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Headed_Departments</relationshipName>
    <relationshipLabel>Departments Headed</relationshipLabel>
    <description>Employee who heads this department</description>
    <inlineHelpText>Select the employee who leads this department</inlineHelpText>
</CustomField>