sf-hrms/force-app/main/default/objects/Department__c/fields/Parent_Department__c.field-meta.xml
<CustomField>
    <fullName>Parent_Department__c</fullName>
    <label>Parent Department</label>
    <type>Lookup</type>
    <referenceTo>Department__c</referenceTo>
    <relationshipName>Sub_Departments</relationshipName>
    <relationshipLabel>Sub-Departments</relationshipLabel>
    <description>Parent department for hierarchical org structure</description>
    <inlineHelpText>Select the parent department if this is a sub-department</inlineHelpText>
</CustomField>